# overblick

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BETA_CHECKLIST.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPER_ONBOARDING.md  GETTING_STARTED.md  INSTALL_OVERBLICK.md  MARKETING_SITE.md  OVERBLICK_SKILL_COMPILER_README.md  PERSONALITIES.md  README.md  SECURITY.md  SECURITY_CONSIDERATIONS.md  SETTING_UP_TELEGRAM.md  VOICE_TUNING.md  chat.py  chat.sh  pyproject.toml  qwen_koll_260313.md  requirements-dev.txt  requirements.txt  security_plan_260303.md
.claude/agents/: alexander-lindgren-tech-lead.md  anders-zorn-uiux.md  david-karlsson-data-engineer.md  elisabeth-lindqvist-sm.md  emma-larsson-qa.md  jessica-holm-business-analyst.md  lisa-nystrom-security-architect.md  marcus-bergstrom-po.md  marcus-eriksson-devops.md  sofia-andersson-fullstack.md  stefan-johansson-cvo.md
.claude/commands/: moltbook-api.md
.claude/skills/: SKILLS-README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test-crossplatform.yml  test.yml
blick/: __init__.py  __main__.py
blick/capabilities/: __init__.py
blick/connectors/: __init__.py
blick/core/: capability.py  emotional_state.py  event_bus.py  identity.py  orchestrator.py  permissions.py  plugin_base.py  plugin_registry.py  quiet_hours.py  scheduler.py
blick/personalities/: __init__.py
blick/supervisor/: __init__.py  audit.py  ipc.py  process.py  routing.py  supervisor.py
config/: blick.yaml  overblick.yaml  overblick.yaml.example  permissions.yaml.example  secrets.yaml.example
docs/: architecture.md  plugin-quickstart.md  production.md  ultimate-guide-personalities.md  ultimate-guide-polymarket-agent.md
overblick/: __init__.py  __main__.py
overblick/capabilities/: __init__.py
overblick/connectors/: __init__.py
overblick/core/: __init__.py  capability.py  component_factory.py  emotional_state.py  event_bus.py  exceptions.py  http_retry.py  identity.py  orchestrator.py  permissions.py  plugin_base.py  plugin_capability_checker.py  plugin_registry.py  quiet_hours.py  scheduler.py
overblick/dashboard/: README.md  __init__.py  __main__.py  app.py  auth.py  config.py  security.py
overblick/gateway/: README.md  __init__.py  __main__.py  app.py  backend_registry.py  config.py  deepseek_client.py  inet_audit.py  inet_auth.py  inet_auth.py.backup  inet_config.py  inet_middleware.py  inet_models.py  inet_tls.py  inet_violation_db.py  internet_gateway.py  models.py  ollama_client.py  queue_manager.py  router.py
overblick/identities/: README_LLM_HINTS.md  __init__.py
overblick/manage/: __init__.py  __main__.py  manager.py
overblick/personalities/: __init__.py
overblick/setup/: __init__.py  __main__.py  app.py  provisioner.py  validators.py  wizard.py
overblick/shared/: __init__.py  onboarding_chat.py  platform.py
overblick/supervisor/: README.md  __init__.py  audit.py  email_handler.py  health_handler.py  ipc.py  process.py  research_handler.py  routing.py  supervisor.py
scenarios/: anomal_deflection.yaml  anomal_intellectual.yaml  cherry_attachment.yaml  cherry_redirect.yaml  natt_paradox.yaml  natt_uncanny.yaml
scripts/: README.md  blick_manager.sh  overblick_manager.sh  quickstart.sh  setup_gmail.py  setup_overblick.sh  supervisor.sh
tests/: conftest.py  debug_dashboard.py  run_scenario_loop.sh  test_dashboard_playwright.py
tests/capabilities/: conftest.py  test_analyzer.py  test_boss_request.py  test_capabilities.py  test_composer.py  test_conversation.py  test_coverage_gaps.py  test_decision_engine.py  test_dream_capability.py  test_dream_system.py  test_email.py  test_emotional_state.py  test_gmail_capability.py  test_host_inspection.py  test_mood_cycle.py  test_opening_selector.py  test_personality_consultant.py  test_psychology_capabilities.py  test_response_gen.py  test_speech.py  test_style_trainer.py  test_summarizer.py  test_system_clock.py  test_telegram_notifier.py  test_vision.py
tests/chaos/: test_chaos.py  test_gateway_chaos.py
tests/core/: test_capability.py  test_emotional_state.py  test_engagement_db.py  test_event_bus.py  test_exceptions.py  test_identity.py  test_orchestrator.py  test_orchestrator_lifecycle.py  test_permissions.py  test_personality.py  test_plugin_base.py  test_plugin_capability_checker.py  test_plugin_context.py  test_plugin_registry.py  test_quiet_hours.py  test_scheduler.py
tests/dashboard/: conftest.py  test_agent_routes.py  test_audit_routes.py  test_auth.py  test_config.py  test_conversations.py  test_dashboard_routes.py  test_dev_routes.py  test_digest_routes.py  test_email_routes.py  test_error_pages.py  test_experimental_routes.py  test_github_routes.py  test_identities_routes.py  test_irc_routes.py  test_log_agent_routes.py  test_moltbook_profiles.py  (+11 more)
website/: DEPLOY.md  coming-soon.html  index.html  script.js  styles.css  vercel.json
whallet/: .gitignore  README.md  __init__.py  config_defaults.json  erc20.py  etherscan_client.py  infura_rpc_client.py  input_validator.py  key_store.py  nonce_manager.py  pytest.ini  rpc_retry.py  secure_error_handler.py  simple_wallet.py  whallet_config.py
(+789 files in other folders)
