[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overblick"
version = "0.1.0"
description = "Security-focused multi-identity agent framework"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
    "cryptography>=42.0",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "aiosqlite>=0.20",
]

[project.scripts]
overblick = "overblick.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "llm: tests that require a running Ollama LLM (use -m llm to run)",
]

[tool.hatch.build.targets.wheel]
packages = ["overblick"]
