[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overblick"
version = "0.1.0"
description = "Security-focused multi-identity agent framework"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9",
    "feedparser>=6.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
    "cryptography>=42.0",
    "keyring>=25.0",
]

[project.optional-dependencies]
gateway = [
    "fastapi>=0.100",
    "uvicorn>=0.30",
    "httpx>=0.27",
]
dashboard = [
    "fastapi>=0.100",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "aiosqlite>=0.20",
    "fastapi>=0.100",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",
]

[project.scripts]
overblick = "overblick.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "llm: tests that require a running Ollama LLM (use -m llm to run)",
    "llm_slow: LLM tests >30s each — multi-turn conversations, forum posts (use -m llm_slow)",
]

[tool.hatch.build.targets.wheel]
packages = ["overblick"]
