[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overblick"
version = "0.1.0"
description = "Security-focused multi-identity agent framework"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9",
    "feedparser>=6.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
    "cryptography>=42.0",
    "keyring>=25.0",
]

[project.optional-dependencies]
gateway = [
    "fastapi>=0.100",
    "uvicorn>=0.30",
    "httpx>=0.27",
]
dashboard = [
    "fastapi>=0.100",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",
    "bcrypt>=4.0",
]
inet = [
    "fastapi>=0.100",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "bcrypt>=4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "aiosqlite>=0.20",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
    "pre-commit>=3.0",
]

[project.urls]
"Homepage" = "https://overblick.dev"
"Repository" = "https://github.com/jensabrahamsson/overblick"
"Bug Tracker" = "https://github.com/jensabrahamsson/overblick/issues"

[project.scripts]
overblick = "overblick.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers --tb=short -m 'not e2e'"
markers = [
    "llm: tests that require a running Ollama LLM (use -m llm to run)",
    "llm_slow: LLM tests >30s each — multi-turn conversations, forum posts (use -m llm_slow)",
    "e2e: end-to-end Playwright browser tests (use -m e2e to run, requires: playwright install chromium)",
]
filterwarnings = [
    "ignore::DeprecationWarning:starlette.templating",
    "ignore::DeprecationWarning:httpx._client",
]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [
    "__pycache__",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "venv",
    "*.pyc",
]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # default errors, pyflakes, warnings
    "I",            # import order
    "UP",           # pyupgrade
    "C4",           # comprehensions
    "RUF",          # ruff-specific rules
]
ignore = [
    "E501",  # line length (handled by black)
    "RUF001",  # non-breaking hyphen in string
    "RUF002",  # en dash in docstring
    "RUF003",  # en dash in comment
    "E741",    # ambiguous variable name 'l'
]
unfixable = [
    "F401",  # unused imports (can be fixed manually)
]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 100
target-version = ["py313"]
skip-string-normalization = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
disable_error_code = ["misc"]

[tool.hatch.build.targets.wheel]
packages = ["overblick"]
